--- a/source/_posts/web3/区块链.md
+++ b/source/_posts/web3/区块链.md
@@ -17,7 +17,7 @@ tags:
 1. 门户网站, 这时用户看到的信息是由门户网站的编辑来维护, 每个人看到的信息都是一样的, 信息的维护由专门的人来进行维护. 信息的所有权在门户网站.
 2. 互联网, 这时发展出来各种网络分享平台, 用户上传信息到平台上, 与其他人进行分享. 这里的信息由用户自己创造, 发布. 但是信息的所有权并不在用户手里, 而是在平台方.
 3. 基于区块链的信息共享平台, 由于区块链是一个公用的信息存储介质, 所以用户自己拥有数据的所有权.
-
+<!--more-->
 # 区块链是什么
 区块链是一个数据结构, 与链表相似
 ![](%60https://raw.githubusercontent.com/liunaijie/images/master/202308061427569.png)
