--- a/source/_posts/Web3/区块链.md
+++ b/source/_posts/Web3/区块链.md
@@ -20,9 +20,9 @@ tags:
 <!--more-->
 # 区块链是什么
 区块链是一个数据结构, 与链表相似
-![](%60https://raw.githubusercontent.com/liunaijie/images/master/202308061427569.png)
-![](%60https://raw.githubusercontent.com/liunaijie/images/master/202308061428506.png)
-![](%60https://raw.githubusercontent.com/liunaijie/images/master/202308061429816.png)
+![](https://raw.githubusercontent.com/liunaijie/images/master/202308061427569.png)
+![](https://raw.githubusercontent.com/liunaijie/images/master/202308061428506.png)
+![](https://raw.githubusercontent.com/liunaijie/images/master/202308061429816.png)
 
 这里使用比特币的头节点结构来解释区块链的运行原理.
 在头节点里存储了以下几个字段:
@@ -42,7 +42,7 @@ Body中可以根据我们的实际应用场景存储一些不同的内容
 这里的nonce就是在其他信息都固定的情况下来调整最终结果的字段.
 这里还有一个可以修改的值为: merkle_root.
 在body中我们可以接受很多个消息, 将消息取哈希后, 再相邻的两两节点取哈希, 最终得到ROOT节点, 将这个值存储到header中.
-![](%60https://raw.githubusercontent.com/liunaijie/images/master/202308061429737.png)
+![](https://raw.githubusercontent.com/liunaijie/images/master/202308061429737.png)
 ## market tree
 在比特币的链中，数据结构分为head和body。body存储交易信息，head中存储了由body中交易信息构建的market tree头节点
 在轻节点中不需要存储交易信息，但当交易发生后进行验证时，需要转账方提供交易的信息，然后轻节点计算出哈希表后向其他全节点获取交易链路上其他节点的哈希值，向上计算后得到一个根哈希值，验证与链中的头节点是否一致，如何一致则说明交易已被写入到链中
@@ -66,8 +66,8 @@ Body中可以根据我们的实际应用场景存储一些不同的内容
 
 # 比特币对区块链的应用
 中本聪在2008年发布了比特币的白皮书: 《Bitcoin: A Peer-to-Peer Electronic Cash System》
-[bitcoin](../../../others/attachedFile/BitCoin/bitcoin.pdf)
-[bitcoin_zh](../../../others/attachedFile/BitCoin/bitcoin_zh_cn.pdf)
+[bitcoin](others/E-Books/BitCoin/bitcoin.pdf)
+[bitcoin_zh](others/E-Books/BitCoin/bitcoin_zh_cn.pdf)
 文中详细说明了如何使用区块链来进行记账, 从而将比特币作为一种电子货币.
 Block的body中进行记账
 比特币会对产生Block的人进行激励, 奖励比特币
