--- a/source/_posts/coding/design/装饰器模式.md
+++ b/source/_posts/coding/design/装饰器模式.md
@@ -14,5 +14,5 @@ tags:
 装饰器模式还有一个特点, 那就是可以对原始类嵌套使用多个装饰器. 为了满足这个应用场景, 在设计的时候, 装饰器类需要跟原始类继承相同的抽象类或者接口
 
 
-[代理、桥接、装饰器、适配器4种设计模式的区别](1设计模式.md#代理、桥接、装饰器、适配器4种设计模式的区别)
+[代理、桥接、装饰器、适配器4种设计模式的区别](设计模式.md#代理、桥接、装饰器、适配器4种设计模式的区别)
 
