--- a/source/_posts/coding/design/适配器模式.md
+++ b/source/_posts/coding/design/适配器模式.md
@@ -86,4 +86,4 @@ public class Adaptor implements ITarget {
 4.  兼容老版本接口
 5.  适配不同格式的数据
 
-[代理、桥接、装饰器、适配器4种设计模式的区别](1设计模式.md#代理、桥接、装饰器、适配器4种设计模式的区别)
+[代理、桥接、装饰器、适配器4种设计模式的区别](设计模式.md#代理、桥接、装饰器、适配器4种设计模式的区别)
