--- a/source/_posts/coding/algorithm/堆以及堆排序.md
+++ b/source/_posts/coding/algorithm/堆以及堆排序.md
@@ -1,8 +1,11 @@
 ---
 title: 堆以及堆排序
 date: 2020-04-12 09:56:34
+categories:
+- [coding, algorithm]
 tags: 
-- 算法与数据结构/堆
+- 算法与数据结构
+- 堆
 ---
 
 # 什么是堆
