--- a/source/_posts/coding/algorithm/布隆过滤器.md
+++ b/source/_posts/coding/algorithm/布隆过滤器.md
@@ -1,8 +1,11 @@
 ---
 title: 布隆过滤器
 date: 2019-10-15 10:11:10
+categories:
+- [coding, algorithm]
 tags: 
-- 算法与数据结构/布隆过滤器
+- 算法与数据结构
+- 布隆过滤器
 ---
 
 # 布隆过滤器
