--- a/source/_posts/coding/algorithm/树/二叉树的层序遍历.md
+++ b/source/_posts/coding/algorithm/树/二叉树的层序遍历.md
@@ -1,8 +1,11 @@
 ---
 title: 二叉树的层序遍历
 date: 2020-03-03 15:44:05
+categories:
+- [coding, algorithm]
 tags: 
-- 算法与数据结构/树
+- 算法与数据结构
+- 树
 ---
 
 # 题目链接
