--- a/source/_posts/coding/algorithm/树/手写红黑树的简单实现.md
+++ b/source/_posts/coding/algorithm/树/手写红黑树的简单实现.md
@@ -1,8 +1,11 @@
 ---
 title: 手写红黑树的简单实现
 date: 2019-12-24 10:12:18
+categories:
+- [coding, algorithm]
 tags: 
-- 算法与数据结构/树
+- 算法与数据结构
+- 树
 ---
 
 基于《算法》一书的红黑树的插入和删除。看过不同的教材，也有不同的实现方式，但是最终的结果也大致相同，感觉这个比较容易理解，就采用这种的方式来进行简单实现。
