--- a/source/_posts/coding/algorithm/树/树的几种遍历方式.md
+++ b/source/_posts/coding/algorithm/树/树的几种遍历方式.md
@@ -1,8 +1,11 @@
 ---
 title: 树的几种遍历方式
 date: 2020-03-03 15:44:05
+categories:
+- [coding, algorithm]
 tags: 
-- 算法与数据结构/树
+- 算法与数据结构
+- 树
 ---
 
 主要记录一下对于二叉树，进行遍历的几种方式，包括：
