--- a/source/_posts/coding/algorithm/链表/判断一个链表是否为回文结构.md
+++ b/source/_posts/coding/algorithm/链表/判断一个链表是否为回文结构.md
@@ -1,8 +1,11 @@
 ---
 title: 判断一个链表是否为回文结构
 date: 2019-10-15 16:51:42
+categories:
+- [coding, algorithm]
 tags: 
-- 算法与数据结构/链表
+- 算法与数据结构
+- 链表
 ---
 # 题目
 
