--- a/source/_posts/coding/algorithm/栈/用递归函数和栈操作逆序一个栈.md
+++ b/source/_posts/coding/algorithm/栈/用递归函数和栈操作逆序一个栈.md
@@ -1,8 +1,11 @@
 ---
 title: 用递归函数和栈操作逆序一个栈
 date: 2019-10-15 16:51:42
+categories:
+- [coding, algorithm]
 tags: 
-- 算法与数据结构/栈
+- 算法与数据结构
+- 栈
 ---
 # 题目：
 
