--- a/source/_posts/coding/algorithm/树/二叉树展开为链表.md
+++ b/source/_posts/coding/algorithm/树/二叉树展开为链表.md
@@ -1,8 +1,11 @@
 ---
 title: 二叉树展开为链表
 date: 2020-03-03 15:44:05
+categories:
+- [coding, algorithm]
 tags:
-  - 算法与数据结构/树
+  - 算法与数据结构
+  - 树
 categories:
 ---
 
