--- a/source/_posts/publish/区块链.md
+++ b/source/_posts/publish/区块链.md
@@ -2,7 +2,7 @@
 title: 比特币与区块链
 date: 2023-08-06 10:31:11
 categories:
-- [coding, web3, bitcorn]  
+- [publish, coding, web3, bitcorn]  
 tags: 
 - web3
 - bitcorn
