update files on 2023-09-15

--- a/source/_posts/publish/博客部署方案.md
+++ b/source/_posts/publish/博客部署方案.md
@@ -1,16 +1,25 @@
 ---
-title: 利用GitHub Action自动部署Hexo博客
+title: Hexo博客自动部署方案
 date: 2021-01-23 15:24:51
 categories:
-- [publish, coding, tools]
-tags: 
-- github
-- Hexo
+  - - publish
+    - coding
+    - tools
+tags:
+  - github
+  - Hexo
 ---
+记录本博客目前的编写, 数据同步, 部署方案.
 
-# 前言
+Markdown文章编写使用Obsidian来完成, 多端数据同步使用`remotely-sync`来同步到Onedrive上. 使用这套方案可以有很好的编辑体验以及可以做到多个终端数据同步.
 
-之前使用Hexo和Github写博客的时候都需要先在本地安装好Hexo环境，然后编写完博客后执行几条命令对文章进行部署，同时再将写的md文章保存到GitHub上，今天发现了一个更加简单的方法，可以在将文章推送到GitHub后自动进行博客的更新推送。利用了GitHub的Action。
+由于我有一台Nas, 在Nas上启动了`Cloud-Sync`服务,将Onedrive中的数据同步到Nas中存储(目前没有内网穿透, 如果可以直接访问Nas,可以使用WebDav直接同步到Nas上).
+
+在Nas中会每天定时调用脚本, 脚本的会检查文章状态, 文件夹是一个Git仓库, 如果检测到文件变动, 会自动提交到Github.
+
+在Github中, 使用Action来检测变动, 来自动完成文章部署.
+
+以下是如何配置Github Action.
 
 # 前提
 
