update files on 2023-09-26

--- a/source/_posts/publish/比特币与区块链.md
+++ b/source/_posts/publish/比特币与区块链.md
@@ -65,8 +65,8 @@ Body中可以根据我们的实际应用场景存储一些不同的内容
 
 # 比特币对区块链的应用
 中本聪在2008年发布了比特币的白皮书: 《Bitcoin: A Peer-to-Peer Electronic Cash System》
-[bitcoin](others/E-Books/BitCoin/bitcoin.pdf)
-[bitcoin_zh](others/E-Books/BitCoin/bitcoin_zh_cn.pdf)
+[bitcoin](../../others/E-Books/BitCoin/Bitcoin%20A%20peer-to-Peer%20Electronic%20Cash%20System.pdf)
+[bitcoin_zh](../../others/E-Books/BitCoin/比特币%20一种点对点电子货币系统.pdf)
 文中详细说明了如何使用区块链来进行记账, 从而将比特币作为一种电子货币.
 Block的body中进行记账
 比特币会对产生Block的人进行激励, 奖励比特币
