update files on 2023-11-22

--- a/source/_posts/life/inspiration/基于区块链的网络平台.md
+++ b/source/_posts/life/inspiration/基于区块链的网络平台.md
@@ -9,4 +9,8 @@ categories: '["life","inspiration","web3"]'
 
 而之前了解到的web3 区块链技术, 可以将数据的所有权返还给用户, 并且数据也是去中心化存储的, 那么是否可能构建这样的一个社区来完成这种事情呢? 
 
+利用IFPS文件存储，用户根据存储内容的多少获取代币，从而激励用户存储其他人的文件（可能存在的问题：一个人创建多个账号进行存储，文件都在这个人的硬盘上，硬盘损坏或者下线之后节点数量骤降以及是否会造成文件损坏）
 
+用户上传之后需要根据文件大小缴费？是否可行？
+
+感觉想了半天还是基于IPFS的文件存储罢了。后续需要详细了解下IPFS
