update files on 2023-11-24

--- a/source/_posts/coding/algorithm/几种排序方式.md
+++ b/source/_posts/coding/algorithm/几种排序方式.md
@@ -455,11 +455,11 @@ private void swap(int[] a, int first, int second) {
 
 按照复杂度分为可以分为三类：
 
-o(n^2^)：冒泡排序，插入排序，选择排序
+$O(n^2)$：冒泡排序，插入排序，选择排序
 
-o(nlongn)：快速排序，归并排序
+$O(nlog_n)$：快速排序，归并排序
 
-o(n)：桶排序，基数排序，计数排序
+O(n)：桶排序，基数排序，计数排序
 
 时间复杂度为o(n)的排序算法对于数据有要求，所以在未知情况下可以使用快速排序，不使用归并排序的原因是归并排序需要额外的空间。
 
