update files on 2023-12-03

--- a/source/_drafts/左程云/02-相邻元素交换.md
+++ b/source/_drafts/左程云/02-相邻元素交换.md
@@ -20,7 +20,8 @@ private static int process(char[] chars) {
    int indexG = 0;  
    for (int i = 0; i < chars.length; i++) {  
       // indexG表示 如果需要移动，G需要移动到的下标  
-      // 如果当前元素为G，则进行移动，移动的次数为 i-indexG 次      // 将indexG向后移动      if (chars[i] == 'G') {  
+      // 如果当前元素为G，则进行移动，移动的次数为 i-indexG 次      // 将indexG向后移动      
+      if (chars[i] == 'G') {  
          res1 += i - indexG;  
          indexG++;  
       }  
