--- a/source/_drafts/左程云/03-以+或-连接数组.md
+++ b/source/_drafts/左程云/03-以+或-连接数组.md
@@ -13,7 +13,8 @@
 private static int process1(int[] array, int index, int rest) {  
    if (index == array.length) {  
       // 当index越界后，即数组内所有数字都使用完毕  
-      // 如果rest为0，则有一种方法，否则没有解法      return rest == 0 ? 1 : 0;  
+      // 如果rest为0，则有一种方法，否则没有解法      
+      return rest == 0 ? 1 : 0;  
    }  
    // 由于可以自由使用+ -，所有计算出它们两者之和  
    return process1(array, index + 1, rest - array[index]) + process1(array, index + 1, rest + array[index]);  
