--- a/source/_drafts/左程云/04-让所有司机获得最大收入.md
+++ b/source/_drafts/左程云/04-让所有司机获得最大收入.md
@@ -19,7 +19,11 @@ private static int maxMoney(int[][] income) {
 }  
   
 /**  
- * 从index位置开始，后续的司机向A，B区域分配 * A区域还能分配restCountOfA个人 * 返回所有收入最大值 * * @param income  
+ * 从index位置开始，后续的司机向A，B区域分配 
+ * A区域还能分配restCountOfA个人 
+ * 返回所有收入最大值 
+ * 
+ * @param income  
  * @param index  
  * @param restCountOfA  
  * @return  
@@ -39,8 +43,8 @@ private static int process(int[][] income, int index, int restCountOfA) {
       return income[index][1] + process(income, index + 1, restCountOfA);  
    }  
    // 当前司机可以去A，也可以去B，取其最大值  
-   int caseA = process(income, index + 1, restCountOfA) + income[index][1];  
-   int caseB = process(income, index + 1, restCountOfA - 1) + income[index][0];  
+   int caseB = process(income, index + 1, restCountOfA) + income[index][1];  
+   int caseA = process(income, index + 1, restCountOfA - 1) + income[index][0];  
    return Math.max(caseA, caseB);  
 }
 ```
