--- a/source/_drafts/左程云/06-最长无重复字符的子串长度.md
+++ b/source/_drafts/左程云/06-最长无重复字符的子串长度.md
@@ -17,7 +17,11 @@ private static int maxLength(String s) {
    int res = 0;  
    for (int i = 0; i < chars.length; i++) {  
       // 当前位置的起始位置  
-      // 由两个元素决定：      // 1. 当前元素上一次出现的位置      // 2. 上一个位置的开始位置      // 取两者的最大值作为此次的起始位置      int curStart = Math.max(charIndex[chars[i]], preStart);  
+      // 由两个元素决定：      
+      // 1. 当前元素上一次出现的位置      
+      // 2. 上一个位置的开始位置      
+      // 取两者的最大值作为此次的起始位置      
+      int curStart = Math.max(charIndex[chars[i]], preStart);  
       int curLength = i - curStart;  
       res = Math.max(res, curLength);  
       preStart = curStart;  
